[project]
name = "vmaf-mcp"
version = "0.1.0"
description = "MCP server exposing VMAF scoring, model listing, and benchmark runs via JSON-RPC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause-Plus-Patent" }
authors = [
  { name = "Lusoris", email = "lusoris@pm.me" },
  { name = "Claude (Anthropic)", email = "noreply@anthropic.com" },
]
dependencies = [
  "mcp>=1.27.0",
  "pydantic>=2.6",
  "anyio>=4.3",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]
# Optional: enables `eval_model_on_split` + `compare_models`. Pulls in the
# ONNX / pandas / scipy stack, so it's off by default to keep the base MCP
# install light for callers that only want `vmaf_score`.
eval = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=24.0.0",
  "onnxruntime>=1.18",
  "scipy>=1.17.1",
]
# Optional: enables `describe_worst_frames` with vision-language fallback
# (SmolVLM → Moondream2 → metadata-only). Pulls in transformers + torch.
# Heavy install; off by default so the base MCP keeps a light footprint
# (ADR-0172 / T6-6).
vlm = [
  "transformers>=5.8.0",
  "torch>=2.11.0",
  "Pillow>=12.2.0",
  "accelerate>=0.34",
]

[project.scripts]
vmaf-mcp = "vmaf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmaf_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line length handled by black
  "B008",   # typer.Option / FastAPI Depends pattern — idiomatic
  "RUF001", # ambiguous unicode — em-dashes in strings are intentional
  "RUF002", # ambiguous unicode in docstrings
  "RUF003", # ambiguous unicode in comments
]
