[project]
name = "vmaf-ensemble-training-kit"
version = "0.1.0"
description = "Portable Phase-A + LOSO retrain bundle for fr_regressor_v2 ensemble (ADR-0324)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "BSD-3-Clause-Plus-Patent" }
authors = [
  { name = "Lusoris", email = "lusoris@pm.me" },
  { name = "Claude (Anthropic)", email = "noreply@anthropic.com" },
]
# Subset of ai/pyproject.toml: only the packages the LOSO trainer +
# validator + ONNX exporter actually import. The kit deliberately does
# NOT pull in the full ai/ optional-dependency tree (no optuna / ray /
# matplotlib / lightning) — those are not on the Phase-A retrain path.
dependencies = [
  "torch>=2.8,<3.0",
  "onnx>=1.21.0,<2.0",
  "onnxruntime>=1.20,<2.0",
  "numpy>=1.26.4,<3.0",
  "pandas>=2.2,<3.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
