# Copyright 2026 Lusoris and Claude (Anthropic)
# SPDX-License-Identifier: BSD-3-Clause-Plus-Patent
[project]
name = "vmaf-roi-score"
version = "0.0.1"
description = "Region-of-interest VMAF score (Option C scaffold): saliency-weighted full-frame VMAF combo."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "BSD-3-Clause-Plus-Patent" }
authors = [
  { name = "Lusoris", email = "lusoris@pm.me" },
  { name = "Claude (Anthropic)", email = "noreply@anthropic.com" },
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.6"]
# Saliency mask materialisation needs onnxruntime + numpy at runtime.
# Kept optional so the smoke tests (which mock subprocess + skip ORT) run
# in a minimal environment.
runtime = ["onnxruntime>=1.25.1", "numpy>=1.26"]

[project.scripts]
vmaf-roi-score = "vmafroiscore.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmafroiscore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff.lint.per-file-ignores]
# Tests legitimately compare to literal expected values.
"tests/*.py" = ["PLR2004"]
