# Copyright 2026 Lusoris and Claude (Anthropic)
# SPDX-License-Identifier: BSD-3-Clause-Plus-Patent
[project]
name = "vmaf-tune"
version = "0.0.1"
description = "Quality-aware encode automation harness for libvmaf (Phase A: x264 grid corpus)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "BSD-3-Clause-Plus-Patent" }
authors = [
  { name = "Lusoris", email = "lusoris@pm.me" },
  { name = "Claude (Anthropic)", email = "noreply@anthropic.com" },
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.6", "optuna>=3.6"]
# Phase A.5 fast-path (ADR-0276): proxy + Bayesian + GPU-verify
# recommend. Optuna is the TPE sampler driver; gated behind an extra
# so the core install path stays zero-dep.
fast = ["optuna>=4.8.0"]

[project.scripts]
vmaf-tune = "vmaftune.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmaftune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff.lint.per-file-ignores]
# Tests legitimately compare to literal expected values; PLR2004 is noise here.
"tests/*.py" = ["PLR2004"]
